# Simple-Blog-Space

./: main.py  pyproject.toml  requirements.txt
flaskr/: __init__.py  db.py  schema.sql
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: index.html  update.html
htmlcov/: d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_auth_py.html  d_a44f0ac069e85531_test_blog_py.html  d_a44f0ac069e85531_test_db_py.html  d_a44f0ac069e85531_test_factory_py.html  d_ba764b65e0011bb7___init___py.html  d_ba764b65e0011bb7_auth_py.html  d_ba764b65e0011bb7_blog_py.html  d_ba764b65e0011bb7_db_py.html  index.html  status.json
instance/: config.py  flaskr.sqlite
tests/: test_auth.py  test_blog.py
